--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -34,7 +34,7 @@ style.
 
     .upload-title-text {
         max-height: 53px;
-        color: #b0aeae;
+        color: #c7c4c4;;;
         font-size: 20px;
         text-align: center;
         margin: 0;
@@ -50,7 +50,7 @@ style.
     }
 
     .upload-user-text {
-        color: black;
+        color: #c7c7c7 !important;
         /*text-decoration:underline;*/
     }
 
