auto focus when click search button

--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -432,6 +432,10 @@ script.
       $('.searchButton').css({
         top: '-8px'
       })
+
+      // no need to autofocus
+      $('.search-query-input').focus();
+
     })
 
 
