--- a/views/media.pug
+++ b/views/media.pug
@@ -186,8 +186,8 @@ block content
         @media (max-width: 900px) {
 
             .uploadTitle {
-                margin-top: 15px;
-                margin-bottom: -37px;
+                margin-top: 32px;
+                margin-bottom: -20px !important;
             }
 
             .mobileTitle {
@@ -569,8 +569,6 @@ block content
                            i.share-icon.fa.fa-exclamation-triangle(aria-hidden="true" style="cursor:pointer;font-size:17px;")
 
             br
-
-            hr
 
             // ** COMMENT SECTION AND FORM **
             div
