--- a/views/media.pug
+++ b/views/media.pug
@@ -257,6 +257,12 @@ block content
             background: #0FDA01;
         }
 
+        @media (min-width: 768px) {
+            .plyr__captions {
+                font-size: 23px;
+            }
+        }
+
 
         /* anything above this width */
 
@@ -294,6 +300,7 @@ block content
                 video#media_player.display-element(playsinline poster=`${uploadServer}/${upload.uploader.channelUrl}/${upload.thumbnails.generated || upload.thumbnails.medium}` controls='', style="max-width:100%;background-color:black;")
                     // to
                     source.video-source(src=`${serverToUse}/${upload.uploader.channelUrl}/${upload.uniqueTag}.mp4`, type='video/mp4')
+                    track(kind='captions', label='English captions', src='/uploads/anthony/lordoftherings.vtt', srclang='en', default='')
                     //source(src=upload.uploadUrl, type='video/mp4')
 
             // if it's an audio
