--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -34,7 +34,7 @@ style.
 
     .upload-title-text {
         max-height: 53px;
-        color: #c7c4c4;;;
+        color: #bcbcbc;
         font-size: 20px;
         text-align: center;
         margin: 0;
