--- a/views/media.pug
+++ b/views/media.pug
@@ -300,7 +300,11 @@ block content
                 video#media_player.display-element(playsinline poster=`${uploadServer}/${upload.uploader.channelUrl}/${upload.thumbnails.generated || upload.thumbnails.medium}` controls='', style="max-width:100%;background-color:black;")
                     // to
                     source.video-source(src=`${serverToUse}/${upload.uploader.channelUrl}/${upload.uniqueTag}.mp4`, type='video/mp4')
-                    track(kind='captions', label='English captions', src='/uploads/anthony/lordoftherings.vtt', srclang='en', default='')
+
+                    // TODO: load captions programatically
+                    //track(kind='captions', label='English captions', src='/uploads/anthony/lordoftherings.vtt', srclang='en', default='')
+
+
                     //source(src=upload.uploadUrl, type='video/mp4')
 
             // if it's an audio
